tests/compile-fail/Rule_8_5.rs
pub const PUBLIC_ZERO: u64 = 0u64;
pub const PUBLIC_ZERO: u64 = 0u64;
//~^ ERROR the name `PUBLIC_ZERO` is defined multiple times
